fix(asset-lifecycle): P1 scopeと証跡認可を実装